set the header as fixed on smaller screens

--- a/app/static/gen/all.css
+++ b/app/static/gen/all.css
@@ -1042,7 +1042,11 @@ a {
   .account {
     display: none; }
   .account-mq {
-    display: block; } }
+    display: block; }
+  .header {
+    position: fixed; }
+  .body-wrapper {
+    margin-top: 4rem; } }
 
 @media only screen and (max-width: 600px) {
   html {
